forgot about quotes

--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "We Are Going to Do the "Melon Cave" Podcast!"
+title:  "Melon Cave ... as a Podcast"
 date:   2024-05-04 4:30:00
 categories: mission
 ---
