--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -5,13 +5,18 @@ date:   2024-05-04 4:30:00
 categories: mission
 ---
 
-## The Podcast
 
-This repository is for holding the material to develop scripts for a five-minute daily podcast called [***Melon Cave.***](https://five.libsyn.com/show/episodes/view/31126668)
+**Here's the [TRAILER for the ***Melon Cave*** podcast](https://five.libsyn.com/show/episodes/view/31126668).**
 
-The podcast is not aimed about YOU ... but you are welcome to follow along. You are welcome to fork this repo and build your own daily journal podcast.
+## This GitHub Repository is for building the scripts that will become the podcast
 
-The sole purpose is to help us ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
+This repository is for holding the material to develop scripts for a five-minute **DAILY** *[Huh?? What?, <GULP> ... how about WEEKLY, first...]* podcast called [***Melon Cave.***](https://five.libsyn.com/show/episodes/view/31126668)
+
+The podcast is not really aimed at YOU ... but you are welcome to follow along.
+
+You are also more than welcome and definitely encouraged to fork this repo and build your own daily journaling podcast, which would be far better than wasting your time listening to the Melon Cave podcast.
+
+The sole purpose is to help us [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
 ## The Daily Neuroexercise Syllabi Method
 
