--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -10,33 +10,37 @@ categories: mission
 
 ## This GitHub Repository is for building the scripts that will become the podcast
 
-This repository is for holding the material to develop scripts for a five-minute **DAILY** *[Huh?? What?, <GULP> ... how about WEEKLY, first...]* podcast called [***Melon Cave.***](https://five.libsyn.com/show/episodes/view/31126668)
+This repository is for holding the material to develop scripts for a five-minute *daily* ...
 
-The podcast is not really aimed at YOU ... but you are welcome to follow along.
+*Huh? DAILY? What? No ... let's go with WEEKLY, at first, then ...* 
+
+... a **WEEKLY** podcast called [***Melon Cave.***](https://five.libsyn.com/show/episodes/view/31126668)
+
+The weekly neuroexercise workout podcast is not really aimed at YOU ... but you are welcome to follow along.
 
 You are also more than welcome and definitely encouraged to fork this repo and build your own daily journaling podcast, which would be far better than wasting your time listening to the Melon Cave podcast.
 
 The sole purpose is to help us [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
-## The Daily Neuroexercise Syllabi Method
+## The WEEKLY Neuroexercise Syllabi Method
 
-The Melon Cave daily journaling discipline about the process of *doing the heavy lifting, mentally* to really dive into a serious investigation and develop different syllabi, one each day, for training the mind.
+The Melon Cave ***daily*** journaling discipline about the process of *doing the heavy lifting, mentally* to really dive into a serious investigation and develop different syllabi, one each day, for training the mind.
 
-Each day, the point of the daily journaling activity revolves around sketching out the outline of a new 200-module syllabus ... that someone might use for a year-long course of study ... it's really about an IMMERSION process; the point of developing a syllabus every day is OVERWHELM THE BRAIN.
+Each day, the point of the daily journaling activity revolves around sketching out the outline of a new 200-module syllabus ... that someone might use for a year-long course of study ... it's really about an IMMERSION process; the point of developing a syllabus each week is to really OVERWHELM THE BRAIN.
 
-Each day, it's about *putting the leaves on the branches of the tree* of a high level outline. Doing this will involve some relatively deep dives into various topics in hardwiring the brain ... this activity is a matter of neurohormesis ... getting the maximum survivable dose -- and then letting the subconscious turn over the factoids.
+Each day, the journaling neuroexercise about *putting the leaves on the branches of the tree* of a high level outline. Doing this will involve some relatively deep dives into various topics in hardwiring the brain ... this activity is a matter of neurohormesis ... getting the maximum survivable dose -- and then letting the subconscious turn over the factoids.
 
 Instead of comfortably just listening to another stupid podcast ... **the SYLLABI OUTLINE format is about working much more aggressively on taking advantage of human neuroplasticity in order to push human intelligence to new levels.**
 
 ***WHEN YOU ARE ACTIVELY TRAINING ... your brain is ALWAYS a work in progress!*** ... but if you're NOT actually really training ... let's say you're just a teevee watcher, a movie watcher, a sports fan, a social media ***follower*** ... then, ***as a passive consumer of content, you are only FOOLING yourself***. You are not actively training your mind ... your brain, in that case, is a work of deteriorating regress to zombie couch mashed-potatoness.
 
-What is shown below is AN EXAMPLE of the initial [*AI-PROPOSED SYLLABUS*](https://claude.ai/chat/) ... it's next to nothing ... nothing but an EARLY ROUGH DRAFT of an OUTLINE such a syllabus, but it is a START ... after we have made edits and revisions, it will still obviously not really be anything more than the START of a work in progress. 
+What is shown below is AN EXAMPLE of the initial [*AI-PROPOSED SYLLABUS*](https://claude.ai/chat/) ... it starts off next to nothing, but it IS a start. At first, it's nothing but an EARLY ROUGH DRAFT of an OUTLINE such a syllabus ... after we have made edits and revisions EACH DAY, it will still obviously not really be anything more than the START of a work in progress ... but the week's worth of daily journaling should be good enough for giving us the prep for doing a five minute WEEKLY podcast. 
 
 The value of the initial [*AI-PROPOSED SYLLABUS*](https://claude.ai/chat/) is that it gives us a starting point for STRUCTURE for what we are going to think about in our daily journal ... as we do more and more of these, our ability to write decent prompts for the AI assistant will improve, so the proposals we get back will get better ... the AI Assitant itself will improve; the companies behind the AI assistants may add better *pro user* features or APIs that we can exploit programmatically ... but, in all serious training regimens, we must recognize that have to start somewhere.
 
 Obviously, even our daily journal edit and refactoring of these proposed outlines are not meant to be taken as a final product ... *maybe there is no final product* ***other than our own brains*** ... neuroexercise is like any other form of exercise -- you have to **do it with the correct form and intention** because doing it ***right*** helps build the discipline or *muscle memory* that you will need to rely upon to *just do it* without thinking about it. 
 
-A plan to get on going is fine, but at some point, you have to actually LIFT THE WEIGHT and LIFT THE WEIGHT CORRECTLY.
+**A plan to get on going is fine, but at some point, you have to actually LIFT THE WEIGHT and LIFT THE WEIGHT CORRECTLY.**
 
 ### The EXAMPLE syllabus of neuroexercise -- improving Christian prayer life
 
