--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -8,23 +8,19 @@ categories: mission
 
 **Here's the [TRAILER for the ***Melon Cave*** podcast](https://five.libsyn.com/show/episodes/view/31126668).**
 
-## This GitHub Repository is for building the scripts that will become the podcast
+## THIS is the repository
 
-This repository is for holding the material to develop scripts for a five-minute *daily* ...
+This GitHub Repository is about the writing necessary for building the scripts that will become the five-minute weekly podcast.
 
-*Huh? DAILY? What? No ... let's go with WEEKLY, at first, then ...* 
+***The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone ... BUT you ARE welcome to follow along WITH THE PROCESS.***
 
-... a **WEEKLY** podcast called [***Melon Cave.***](https://five.libsyn.com/show/episodes/view/31126668)
+You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast.* 
 
-The weekly neuroexercise workout podcast is not really aimed at YOU ... but you are welcome to follow along.
-
-You are also more than welcome and definitely encouraged to fork this repo and build your own daily journaling podcast, which would be far better than wasting your time listening to the Melon Cave podcast.
-
-The sole purpose is to help us [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
+The sole purpose of this exercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
 ## The WEEKLY Neuroexercise Syllabi Method
 
-The Melon Cave ***daily*** journaling discipline about the process of *doing the heavy lifting, mentally* to really dive into a serious investigation and develop different syllabi, one each day, for training the mind.
+The Melon Cave ***daily*** journaling discipline about the process of *doing the heavy lifting, mentally* EACH DAY, THROUGH THE WEEK to really dive deeply enough into a serious investigation of a topic and develop different syllabi, one each week, for different neuroexercises in training the mind.
 
 Each day, the point of the daily journaling activity revolves around sketching out the outline of a new 200-module syllabus ... that someone might use for a year-long course of study ... it's really about an IMMERSION process; the point of developing a syllabus each week is to really OVERWHELM THE BRAIN.
 
