--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -12,9 +12,9 @@ categories: mission
 
 This GitHub Repository is about the writing necessary for building the scripts that will become the five-minute weekly podcast.
 
-***The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone ... BUT you ARE welcome to follow along WITH THE PROCESS.***
+The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone to *just* listen to ... but you are welcome to follow along ***WITH THE PROCESS of building it.***
 
-You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast.* 
+You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast.* 
 
 The sole purpose of this exercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
