take back ownership of your soul

--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -14,9 +14,9 @@ This GitHub Repository is about the writing necessary for building the scripts t
 
 The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone to *just* listen to ... but you are welcome to follow along ***WITH THE PROCESS of building it.***
 
-You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast.* 
+You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast* **YOU DON'T NEED SOMEBODY ELSE'S SERMONS** ... stop following celebrities, stop playing church, stop longing for a great performance from the pulpit ... **BE THE LIFE THAT DEFINES YOUR OWN MEDIA.** 
 
-The sole purpose of this exercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
+The sole purpose of this introspective journallin neuroexercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... we take back ownership of our souls ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
 ## The WEEKLY Neuroexercise Syllabi Method
 
