no more bricks and mortar

--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -10,13 +10,15 @@ categories: mission
 
 ## THIS is the repository
 
-This GitHub Repository is about the writing necessary for building the scripts that will become the five-minute weekly podcast.
+Melon Cave is an ANTI-media media. This forkable, shareable, extensible open source GitHub Repository is about the writing necessary for building the scripts that will become the five-minute weekly podcast.
+
+You have a soul ... that means you don't need someone else's sermons ... you wouldn't make yourself into a car if you physically hung out in your garage, even if you did it regularly, even for 24 hours/day -- you are not going to make yourself into a Christian by having your butt in some seat in some building. Why are you worshipping celebrities or pharisaical figures of authority? Why have you abdicated your spiritual sovereignty? YOU have to be in control of your prayer life ... it's important to understand what it means we say that 'Melon Cave is open source ANTI-media media.' 
 
 The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone to *just* listen to ... but you are welcome to follow along ***WITH THE PROCESS of building it.***
 
-You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast* **YOU DON'T NEED SOMEBODY ELSE'S SERMONS** ... stop following celebrities, stop playing church, stop longing for a great performance from the pulpit ... **BE THE LIFE THAT DEFINES YOUR OWN MEDIA.** 
+You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast* ... you have a soul; you should not need someone else's sermons ... stop following celebrities, stop playing church, stop longing for a great performance from the pulpit ... BE the life that defines your own media.
 
-The sole purpose of this introspective journallin neuroexercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... we take back ownership of our souls ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
+The sole purpose of this introspective journalling neuroexercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... we take back ownership of our souls ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
 ## The WEEKLY Neuroexercise Syllabi Method
 
