--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -6,7 +6,7 @@ categories: mission
 ---
 
 
-**Here's the [TRAILER for the ***Melon Cave*** podcast](https://five.libsyn.com/show/episodes/view/31126668).**
+**Here's the [TRAILER for the ***Melon Cave*** podcast](https://sites.libsyn.com/499103/site/cave-in-your-melon-stop-the-bad-habits-of-being-yourself).**
 
 ## THIS is the repository
 
@@ -14,7 +14,7 @@ Melon Cave is an ANTI-media media. This forkable, shareable, extensible open sou
 
 You have a soul ... that means you don't need someone else's sermons ... you wouldn't make yourself into a car if you physically hung out in your garage, even if you did it regularly, even for 24 hours/day -- you are not going to make yourself into a Christian by having your butt in some seat in some building. Why are you worshipping celebrities or pharisaical figures of authority? Why have you abdicated your spiritual sovereignty? YOU have to be in control of your prayer life ... it's important to understand what it means we say that 'Melon Cave is open source ANTI-media media.' 
 
-The [weekly ***Melon Cave*** neuroexercise workout podcast](https://five.libsyn.com/show/episodes/view/31126668) is not really aimed intended for anyone to *just* listen to ... but you are welcome to follow along ***WITH THE PROCESS of building it.***
+The [weekly ***Melon Cave*** neuroexercise workout podcast](https://sites.libsyn.com/499103/) is not really aimed intended for anyone to *just* listen to ... but you are welcome to follow along ***WITH THE PROCESS of building it.***
 
 You are also more than welcome and definitely encouraged to fork this repo and build a better neuroexercise podcast project for yourself ... *because doing it yourself would be far better than wasting your time* **just listening** *to the Melon Cave podcast* ... you have a soul; you should not need someone else's sermons ... stop following celebrities, stop playing church, stop longing for a great performance from the pulpit ... BE the life that defines your own media.
 
