--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "The Podcast That Overcomes Zombie Couch Mashed-Potatoness"
+title:  "The Podcast"
 date:   2024-05-04 4:30:00
 categories: mission
 ---
@@ -20,7 +20,7 @@ You are also more than welcome and definitely encouraged to fork this repo and b
 
 The sole purpose of this introspective journalling neuroexercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... we take back ownership of our souls ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
-## The WEEKLY Neuroexercise Syllabi Method
+## The Neuroexercise Syllabi Method
 
 The Melon Cave ***daily*** journaling discipline about the process of *doing the heavy lifting, mentally* EACH DAY, THROUGH THE WEEK to really dive deeply enough into a serious investigation of a topic and develop different syllabi, one each week, for different neuroexercises in training the mind.
 
@@ -40,87 +40,3 @@ Obviously, even our daily journal edit and refactoring of these proposed outline
 
 **A plan to get on going is fine, but at some point, you have to actually LIFT THE WEIGHT and LIFT THE WEIGHT CORRECTLY.**
 
-### The EXAMPLE syllabus of neuroexercise -- improving Christian prayer life
-
-The proposed outline is meant to be the starting point for an ongoing internal monologue that we might have with ourselves, focusing on the general map or high-level overview that the syllabus is about.
-
-This example is for a 200 module (daily, year-long) graduate/postgraduate level course on improving Christian prayer life with deep dives into associated topics on prayer, neuroscience, and cognitive science:
-
-1. Foundations of Christian Prayer
-
-   - Biblical basis for prayer
-   - Historical development of Christian prayer practices
-   - Theology of prayer
-   - Types of prayer (adoration, confession, thanksgiving, supplication)
-
-2. Neuroscience of Prayer and Spirituality  
-
-   - Neurological effects of prayer and meditation
-   - Neural correlates of spiritual experiences
-   - Brain imaging studies on prayer and religious practices
-   - Neurotransmitters involved in spiritual well-being (e.g. serotonin, dopamine)
-   - Neuroplasticity and habit formation of regular prayer
-
-3. Cognitive and Behavioral Aspects of Prayer
-
-   - Cognitive benefits of prayer (increased focus, reduced rumination, etc.)
-   - Behavioral effects of prayer (prosocial behavior, self-control, etc.)
-   - Designing personal prayer routines and rituals
-   - Integrating prayer into daily life and decision-making
-   - Overcoming mental blocks and distractions during prayer
-
-4. Prayer and Emotional Regulation
-
-   - Prayer for managing stress, anxiety, and negative emotions  
-   - Gratitude-based prayer for increasing positive emotions
-   - Forgiveness-based prayer for overcoming resentment and anger
-   - Intercessory prayer for developing empathy and compassion
-   - Contemplative prayer for inner peace and equanimity
-
-5. Mindfulness in Christian Prayer Traditions
-
-   - Centering prayer and Christian meditation 
-   - Lectio Divina and mindful scripture reading
-   - Practicing the presence of God
-   - Mindful breathing and body awareness in prayer
-   - Mindfulness-based stress reduction techniques
-
-6. Neurology of Hate and Conflict
-
-   - Neural basis of prejudice, xenophobia, and outgroup hostility
-   - Role of fear, threat perception, and amygdala activation
-   - Cognitive biases and stereotyping in intergroup conflict
-   - Social-identity theory and religious ingroup/outgroup dynamics
-   - Applying prayer to overcome hate and conflict
-
-7. Strategies for Overcoming Materialism and Greed
-
-   - Neuroscience of reward-seeking behavior and addiction
-   - Hedonic treadmill and the futility of extrinsic goal pursuits
-   - Developing contentment and sufficiency through prayer  
-   - Generosity-based prayers for overcoming greed
-   - Examining the idols of wealth, power, fame and status from a Christian perspective
-
-8. Humility and Egolessness in Prayer
-
-   - Neuroscience of self-referential processing and ego
-   - Dangers of spiritual pride and self-righteousness 
-   - Prayers of repentance, meekness and poverty of spirit
-   - Surrendering to God's will over selfish ambitions
-   - Cultivating humble service and compassionate action
-
-9. Deepening Intimacy with God through Prayer
-
-   - Developing a conversational relationship with God
-   - Listening prayer and discernment of God's voice
-   - Prayers of praise, adoration and worship 
-   - Ignatian spiritual exercises for imaginative prayer
-   - Dark night of the soul and prayer during spiritual dry spells
-
-10. Capstone Project / Practicum
-
-    - Students design and implement a personal prayer program 
-    - Regular journaling to document experiences and insights
-    - Demonstrating growth in character and spiritual metrics  
-    - Potential for small group projects and virtual retreats
-    - Final reflection paper synthesizing learnings from the course
