--- a/_posts/2024-05-04-podcast.md
+++ b/_posts/2024-05-04-podcast.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "The Podcast"
+title:  "The Podcast, Journalling and Syllabi [for Reading Lists]"
 date:   2024-05-04 4:30:00
 categories: mission
 ---
@@ -20,7 +20,19 @@ You are also more than welcome and definitely encouraged to fork this repo and b
 
 The sole purpose of this introspective journalling neuroexercise is to help ***us*** [if you choose join me] ... CAVE IN THE MELON ... by working on our own melon ... as well develop skills in DAILY prayer, DAILY journaling, DAILY training ... we take back ownership of our souls ... and all of the little things like re-writing, revising, speaking, rewriting again, refactoring the material, speaking and recording, and editing audio content and supporting artifacts and accoutrements [so that we or anyone who wants to can come back and revise it, reproduce it later].
 
-## The Neuroexercise Syllabi Method
+## The Journalling Method Is About Thinking
+
+You CANNOT possibly grow with effort, struggle, failure, pain and STRESS.
+
+Without stress, there's no growth ... you're just taking a blast of happy gaseous sunshine up your rookter ... growth comes from stress.
+
+Journalling is a technique that some people find helpful for dealing with stress, anxiety and depression. You use your journal to help you map out, monitor and process your habits and behaviors, or process your feelings ... if you don't journal or at least doodle or scribble down notes somewhere, you really don't engage in thinking.
+
+IDIOTS imagine that watching content ... either on YouTube vids, netflix or the teevee set ... or listening to content ... on AM yak radio, podcasts or audiobooks ... is the same as thinking.  **PASSIVELY SWALLOWING CONTENT IS ABSOLUTELY NOT THE SAME AS THINKING** If you don't journal, or scribble or doodle or maybe kick around ideas in your shop or studio, you are not really *thinking* ... you are BEING PROGRAMMED, just like all of the other sheep in the flock of sheep passively SWALLOWING ideas, content, entertainment from media programmers.
+
+Melon Cave is based on journalling, scribbling, doodling, writing lots and lots and lots of ideas down ... it's entirely about THINKING.
+
+## The Neuroexercise Syllabi Method Is About Controlling The Projector
 
 The Melon Cave ***daily*** journaling discipline about the process of *doing the heavy lifting, mentally* EACH DAY, THROUGH THE WEEK to really dive deeply enough into a serious investigation of a topic and develop different syllabi, one each week, for different neuroexercises in training the mind.
 
