--- a/FOSS/2.md
+++ b/FOSS/2.md
@@ -4,7 +4,7 @@ title: 2)
 permalink: /FOSS/2/
 ---
 
-## Exploiting AI, So That We May BETTER Program OURSELVES
+## FOSS AI Toolchain ... So That We May BETTER Program OURSELVES
 
 [Philippians 4:8-9](https://www.gotquestions.org/think-about-these-things.html) admonishes us to THINK diligently about “whatever is true, whatever is noble, whatever is right, whatever is pure, whatever is lovely, whatever is admirable, . . . excellent, or praiseworthy.” We are to CONTROL our thoughts and our thoughtlife by removing any kind of mindless, out of control, hate-filled programming and instead to focus on teaching ourselves to be more curious and engaged with others in what is good and uplifting.
 
