--- a/FOSS/0.md
+++ b/FOSS/0.md
@@ -6,13 +6,22 @@ permalink: /FOSS/0/
 
 Yeah, we are fans of [Joe Foss](https://en.m.wikipedia.org/wiki/Joe_Foss) and his brand of freedom, but in this **repository**, the word *freedom* is about FREELY extensible, open source spiritualware ... it's all about our habits, our brains, taking advantage of the neuroplasticity given us by our Creator to *program ourselves*. Freedom is always a good thing ... **Discipline Equals Freedom!** and **Applied Freedom Transforms Our Discipline!**
 
-1) Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience
-2) AI Toolchain ... So That We May BETTER Program OURSELVES
-3) 200 Modules On Pain Management Training
-4) 200 Modules Improving Christian Prayer Life
-5) Time Mgmt -- Stop Being A Prisoner of Time, No Regrets, No Worries
-6) Nutrition and Diet to Support Neuroplasticity
-7) TBD
-8) TBD
-9) 100 Potential Issues For Melon Cave To Ponder
-A) Examen: Asking oneself several different flavors of *'WHAT did you get done today?'* everyday.
+1) [Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience](https://meloncave.github.io/FOSS/1/)
+
+2) [AI Toolchain ... So That We May BETTER Program OURSELVES](https://meloncave.github.io/FOSS/2/)
+
+3) [200 Modules On Pain Management Training](https://meloncave.github.io/FOSS/3/)
+
+4) [200 Modules Improving Christian Prayer Life](https://meloncave.github.io/FOSS/4/)
+
+5) [Time Mgmt -- Stop Being A Prisoner of Time, No Regrets, No Worries](https://meloncave.github.io/FOSS/5/)
+
+6) [Nutrition and Diet to Support Neuroplasticity](https://meloncave.github.io/FOSS/6/)
+
+7) [100 Modules Practical Applied Cognitive Neuroscience](https://meloncave.github.io/FOSS/7/)
+
+8) [200 Meditations On Our Venture's Value Proposition](https://meloncave.github.io/FOSS/8/)
+
+9) [100 Potential Issues For Melon Cave To Ponder](https://meloncave.github.io/FOSS/9/)
+
+A) [Examen: Asking oneself several different flavors of *'WHAT did you get done today?'* everyday.](https://meloncave.github.io/FOSS/A/)
