--- a/FOSS/8.md
+++ b/FOSS/8.md
@@ -5,7 +5,7 @@ permalink: /FOSS/8/
 ---
 
 
-# Melon Cave Value Proposition
+# FOSS 200 Meditations On Value Proposition
 
 Identifying a specific problem for a specific audience, articulating how the product/service solves the problem, and communicating the audience-specific benefits of the solution is what the [list 100 meditations below](#100-proposed-beat-meditations) or [a list of 100 more](#100-more) is about. Developing beat poetry and songs about these proposals helps transform vaporware into something that is at least potentially memorable. 
 
