--- a/FOSS/0.md
+++ b/FOSS/0.md
@@ -1,10 +1,12 @@
 ---
 layout: page
-title: FOSS
+title: Menu
 permalink: /FOSS/0/
 ---
 
-Yeah, we are fans of [Joe Foss](https://en.m.wikipedia.org/wiki/Joe_Foss) and his brand of freedom, but in this **repository**, the word *freedom* is about FREELY extensible, open source spiritualware ... it's all about our habits, our brains, taking advantage of the neuroplasticity given us by our Creator to *program ourselves*. Freedom is always a good thing ... **Discipline Equals Freedom!** and **Applied Freedom Transforms Our Discipline!**
+Melon Cave is all about our habits, our brains, and how we take advantage of the neuroplasticity given us by our Creator to *program ourselves* to remove the bad habits of being ourselves and to improve our discipline.
+
+**Discipline Equals Freedom!** and we apply our freedom to **transform our ability as disciples!**
 
 1) [Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience](https://meloncave.github.io/FOSS/1/)
 
