--- a/FOSS/0.md
+++ b/FOSS/0.md
@@ -16,7 +16,7 @@ Melon Cave is all about our habits, our brains, and how we take advantage of the
 
 4) [200 Modules Improving Christian Prayer Life](https://meloncave.github.io/FOSS/4/)
 
-5) [Time Mgmt -- Stop Being A Prisoner of Time, No Regrets, No Worries](https://meloncave.github.io/FOSS/5/)
+5) [Time Mgmt Discipline Without Regrets, Without Worries](https://meloncave.github.io/FOSS/5/)
 
 6) [Nutrition and Diet to Support Neuroplasticity](https://meloncave.github.io/FOSS/6/)
 
