--- a/FOSS/1.md
+++ b/FOSS/1.md
@@ -5,7 +5,7 @@ permalink: /FOSS/1/
 ---
 
 
-## FOSS Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience
+## Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience
 
 # Table of Contents
 
