--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -5,7 +5,9 @@ permalink: /FOSS/4/
 ---
 
 
-At this point, it's ONLY an outline for syllabus for a 200-module (daily, year-long) graduate/postgraduate level course on improving Christian prayer life with deep dives into associated topics:
+# 200-Module Improving Christian Prayer Life
+
+At this point, it's ONLY an outline for syllabus ... with deep dives into associated topics:
 
 ## 1. Foundations of Christian Prayer
 
