--- a/FOSS/5.md
+++ b/FOSS/5.md
@@ -4,7 +4,7 @@ title: 5)
 permalink: /FOSS/5/
 ---
 
-## FOSS Time Mgmt -- Stop Being A Prisoner of Time, No Regrets, No Worries
+## Time Mgmt Discipline Without Regrets, Without Worries
 
 The past, present, and future are all important, but they can also be traps. 
 
