--- a/FOSS/6.md
+++ b/FOSS/6.md
@@ -4,7 +4,7 @@ title: 6)
 permalink: /FOSS/6/
 ---
 
-# FOSS Nutrition and Diet to Support Neuroplasticity
+# Nutrition and Diet to Support Neuroplasticity
 
 ## Table of Contents
 1. [Executive Summary](#executive-summary)
