--- a/FOSS/7.md
+++ b/FOSS/7.md
@@ -4,7 +4,7 @@ title: 7)
 permalink: /FOSS/7/
 ---
 
-## FOSS Practical Applied Cognitive Neuroscience 
+## Practical Applied Cognitive Neuroscience 
 
 ***Why should anyone care about enhancing cognitive awareness and mitigating decline as one ages?***
 
