--- a/FOSS/8.md
+++ b/FOSS/8.md
@@ -5,11 +5,11 @@ permalink: /FOSS/8/
 ---
 
 
-# FOSS 200 Meditations On Value Proposition
-
-Identifying a specific problem for a specific audience, articulating how the product/service solves the problem, and communicating the audience-specific benefits of the solution is what the [list 100 meditations below](#100-proposed-beat-meditations) or [a list of 100 more](#100-more) is about. Developing beat poetry and songs about these proposals helps transform vaporware into something that is at least potentially memorable. 
+# 200 Meditations On Value Proposition
 
 **Ventures or activities like this PROPOSE or intend to create VALUE** -- ideas have to start being developed into something with a proposal ... but ultimately, of course the **value** we actually create comes down to our whole body of work ... what is learned from that work, through that work ... ideally, *maybe* how that work has helped others ... *maybe* ... the only certainty is that we MUST give the glory to our Creator. 
+
+Identifying a specific problem for a specific audience, articulating how the product/service solves the problem, and communicating the audience-specific benefits of the solution is what the [list 100 meditations below](#100-proposed-beat-meditations) or [a list of 100 more](#100-more) is about. Developing beat poetry and songs about these proposals helps transform vaporware into something that is at least potentially memorable. 
 
 Sometimes, maybe the whole point of the exercise just a matter of dealing with our issues and self-impediments ... so that we can get past the crap, *cave in the melons* of our personal demons ... and maybe be able to try to help us help others, but we keep our aspirations simple, humble. 
 
