--- a/FOSS/9.md
+++ b/FOSS/9.md
@@ -4,9 +4,9 @@ title: 9)
 permalink: /FOSS/9/
 ---
 
-## 100 Potential Issues For Melon Cave To Ponder
+## 100 Potential Future Issues For Melon Cave To Ponder
 
-Not necessarily things to do ... candidate topics or *veins of gold to mine*
+Not necessarily things to dive into ... candidate topics or *veins of gold to mine*
 
 ### Mindset and Awareness
 
