--- a/FOSS/0.md
+++ b/FOSS/0.md
@@ -1,16 +1,20 @@
 ---
 layout: page
-title: Menu
+title: TDT
 permalink: /FOSS/0/
 ---
 
-Melon Cave is all about our habits, our brains, and how we take advantage of the neuroplasticity given us by our Creator to *program ourselves* to remove the bad habits of being ourselves and to improve our discipline.
+Melon Cave is all about using Transformative Discipleship Technology (TDT).
+
+TDT is about using all the resources available to improve cognitive awareness, to apply neuroscience and to develop Christian mindfulness discipline. This reaches into areas like neurohacking, developing one’s meta-cognition skills, become a more proficient human-in-the-loop (HITL) of H-I-T-L machine learning and AI systems, thinking about the algorithms of large-language learning models (LLM) of AI think, using AI as a cognitive-support technology.
+
+In other words, TDT is about taking advantage of the neuroplastic brain given us by our Creator to *program ourselves* to work more diligently on removing the bad habits of being ourselves and to improve our discipline as disciples of Christ.
 
 **Discipline Equals Freedom!** and we apply our freedom to **transform our ability as disciples!**
 
 1) [Contemplative Practice, Neuroplasticity, and Cognitive Neuroscience](https://meloncave.github.io/FOSS/1/)
 
-2) [AI Toolchain ... So That We May BETTER Program OURSELVES](https://meloncave.github.io/FOSS/2/)
+2) [AI Toolchain: So That We May BETTER Program OURSELVES](https://meloncave.github.io/FOSS/2/)
 
 3) [200 Modules On Pain Management Training](https://meloncave.github.io/FOSS/3/)
 
